--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -7,6 +7,14 @@
   box-sizing: border-box;
 }
 
+a {
+  text-decoration: none;
+  &:link,
+  &:visited {
+    color: inherit;
+  }
+}
+
 html,
 body,
 div,
