--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,5 +1,5 @@
 // COLORS
 $prim-blue: #09b1ba;
-$text-grey: #8a8a8a;
-$text-black: #333;
+$prim-grey: #8a8a8a;
+$dark-black: #333;
 $bg-grey: #ebedee;
