--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,5 +1,11 @@
+// GOOGLE FONT
+@import url(https://fonts.googleapis.com/scss2?family=Roboto:wght@100;300;400;500;700&display=swap);
+
+// FONT VARIABLE
+$font-main: "Roboto", sans-serif;
+
 // COLORS
 $prim-blue: #09b1ba;
 $prim-grey: #8a8a8a;
-$dark-black: #333;
+$prim-black: #333;
 $bg-grey: #ebedee;
