--- a/src/containers/Signin/style.signin.scss
+++ b/src/containers/Signin/style.signin.scss
@@ -1,7 +1,7 @@
 @import "../../styles/styles.scss";
 
-.signup {
-  .signup-container {
+.signin {
+  .signin-container {
     @include container;
     padding: 30px 0;
     display: flex;
@@ -9,7 +9,7 @@
     align-items: center;
     flex-direction: column;
 
-    .signup-form {
+    .signin-form {
       margin: 20px 0;
       display: flex;
       flex-direction: column;
