--- a/src/containers/Home/style.home.scss
+++ b/src/containers/Home/style.home.scss
@@ -1,15 +1,19 @@
 @import "../../styles/styles.scss";
 
-.offers-container {
-  display: flex;
-  justify-content: center;
+.site-wrap {
+  margin-top: 100px;
 
-  .offers-container-wrap {
-    width: 90%;
-    max-width: 1280px;
-    margin-top: 30px;
+  .offers-container {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: center;
+
+    .offers-container-wrap {
+      width: 90%;
+      max-width: 1280px;
+      margin-top: 30px;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: flex-start;
+    }
   }
 }
