--- a/src/components/Header/style.header.scss
+++ b/src/components/Header/style.header.scss
@@ -5,5 +5,5 @@
   background-image: url("../../assets/images/header-bg.jpeg");
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: initial;
+  background-position: center;
 }
