--- a/src/containers/Signup/style.signup.scss
+++ b/src/containers/Signup/style.signup.scss
@@ -1,6 +1,6 @@
 @import "../../styles/styles.scss";
 
-.signup {
+.site-wrap {
   .signup-container {
     @include container;
     padding: 30px 0;
