--- a/src/components/Header/style.header.scss
+++ b/src/components/Header/style.header.scss
@@ -1,3 +1,5 @@
+@import "../../styles/styles.scss";
+
 .header-bg {
   margin: 10px 0;
   height: 500px;
@@ -6,4 +8,63 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  display: flex;
+  position: relative;
+
+  .tear-svg {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    height: 80px;
+    pointer-events: none;
+  }
+
+  .header-box {
+    height: 100%;
+    width: 45%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .header-box-content {
+      width: 400px;
+      background-color: white;
+      border-radius: 5px;
+      border: 1px solid $bg-grey;
+      display: flex;
+      flex-direction: column;
+      padding: 30px;
+
+      .header-box-content-tagline {
+        font-family: $font-main;
+        font-size: 2.2rem;
+        margin-bottom: 20px;
+      }
+
+      .header-box-content-cta {
+        margin: 20px 0;
+        border: none;
+        width: 200px;
+        font-family: $font-main;
+        font-size: 1rem;
+        color: white;
+        background-color: $prim-blue;
+        padding: 10px 0;
+        border-radius: 5px;
+        &:hover {
+          cursor: pointer;
+        }
+        &:active {
+          opacity: 0.7;
+        }
+      }
+
+      .header-box-content-about {
+        font-family: $font-main;
+        font-size: 0.9rem;
+        font-weight: 400;
+        color: $prim-blue;
+      }
+    }
+  }
 }
