--- a/src/components/Topbar/style.topbar.scss
+++ b/src/components/Topbar/style.topbar.scss
@@ -9,6 +9,7 @@
   position: fixed;
   width: 100%;
   top: 0px;
+  z-index: 100;
 
   .topbar-container {
     @include container;
@@ -106,9 +107,61 @@
     height: 30px;
     display: flex;
     align-items: center;
+    margin-left: 130px;
 
-    span {
-      margin-right: 10px;
+    .topbar-nav-menu-sort {
+      display: flex;
+      align-items: center;
+      margin-right: 20px;
+    }
+
+    .topbar-nav-menu-text {
+      font-family: $font-main;
+      font-size: 0.8rem;
+      font-weight: 300;
+      color: $prim-grey;
+    }
+
+    input[type="checkbox"] {
+      height: 0;
+      width: 0;
+      visibility: hidden;
+    }
+
+    label {
+      cursor: pointer;
+      text-indent: -9999px;
+      width: 40px;
+      height: 20px;
+      background: grey;
+      display: block;
+      border-radius: 100px;
+      position: relative;
+    }
+
+    label:after {
+      content: "";
+      position: absolute;
+      top: 1px;
+      left: 1px;
+      width: 18px;
+      height: 18px;
+      background: #fff;
+      border-radius: 90px;
+      transition: 0.3s;
+    }
+
+    input:checked + label {
+      background: $prim-blue;
+    }
+
+    input:checked + label:after {
+      left: calc(100% - 1px);
+      transform: translateX(-100%);
+    }
+
+    label:active:after {
+      width: 20px;
     }
   }
 }
