--- a/src/components/Header/style.header.scss
+++ b/src/components/Header/style.header.scss
@@ -19,11 +19,15 @@
     pointer-events: none;
   }
 
+  .header-container {
+    @include container;
+  }
+
   .header-box {
     height: 100%;
     width: 45%;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
 
     .header-box-content {
