--- a/src/containers/Publish/style.publish.scss
+++ b/src/containers/Publish/style.publish.scss
@@ -1,14 +1,9 @@
 @import "../../styles/styles.scss";
 
-.bckg {
-  width: 100%;
-  height: 100%;
-  background-color: $bg-grey;
-  padding-top: 60px;
-}
+@import "../../styles/styles.scss";
 
 .site-wrap {
-  .publish-container {
+  .signin-container {
     @include container;
     padding: 50px 0;
     display: flex;
@@ -22,28 +17,12 @@
       margin-bottom: 20px;
     }
 
-    .publish-form {
+    .signin-form {
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-      width: 100%;
 
-      .publish-form-content {
-        display: flex;
-        justify-content: space-between;
-        background-color: white;
-        margin: 10px 0;
-        padding: 20px;
-
-        .publish-form-content-col {
-          display: flex;
-          flex-direction: column;
-          justify-content: space-evenly;
-          align-items: flex-start;
-        }
-      }
-
-      .publish-form-input {
+      .signin-form-input {
         border: none;
         outline: none;
         font-family: $font-main;
@@ -51,7 +30,7 @@
         padding: 10px;
         margin: 10px 0;
       }
-      .publish-form-submit {
+      .signin-form-submit {
         margin: 20px 0;
         border: none;
         font-family: $font-main;
