publish offre working + fix user avatar when no file

--- a/src/components/Avatar/style.avatar.scss
+++ b/src/components/Avatar/style.avatar.scss
@@ -1,11 +1,17 @@
+@import "../../styles/";
+
 .avatar-small {
   height: 25px;
   width: 25px;
   border-radius: 50%;
+  background-color: $bg-grey;
+  color: white;
 }
 
 .avatar-medium {
   height: 45px;
   width: 45px;
   border-radius: 50%;
+  background-color: $bg-grey;
+  color: white;
 }
