--- a/src/containers/Product/style.product.scss
+++ b/src/containers/Product/style.product.scss
@@ -1,6 +1,6 @@
 @import "../../styles/styles.scss";
 
-.bckg {
+.bckg-product {
   width: 100%;
   height: 100vh;
   background-color: $bg-grey;
@@ -90,6 +90,19 @@
       display: flex;
       align-items: center;
       margin-bottom: 52px;
+
+      .avatar-medium {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 45px;
+        width: 45px;
+        border-radius: 50%;
+        background-color: $prim-grey;
+        font-family: $font-main;
+        font-size: 1.2rem;
+        color: white;
+      }
 
       .product-infos-owner-username {
         font-family: $font-main;
