--- a/src/containers/Publish/style.publish.scss
+++ b/src/containers/Publish/style.publish.scss
@@ -1,6 +1,11 @@
 @import "../../styles/styles.scss";
 
-@import "../../styles/styles.scss";
+.bckg-publish {
+  width: 100%;
+  height: 100%;
+  background-color: $bg-grey;
+  padding-top: 60px;
+}
 
 .site-wrap {
   .signin-container {
