--- a/src/containers/Publish/style.publish.scss
+++ b/src/containers/Publish/style.publish.scss
@@ -1,6 +1,5 @@
 @import "../../styles/styles.scss";
-
-.bckg-publish {
+.bckg {
   width: 100%;
   height: 100%;
   background-color: $bg-grey;
@@ -8,8 +7,9 @@
 }
 
 .site-wrap {
-  .signin-container {
+  .publish-container {
     @include container;
+    width: 72%;
     padding: 50px 0;
     display: flex;
     justify-content: center;
@@ -22,20 +22,74 @@
       margin-bottom: 20px;
     }
 
-    .signin-form {
+    .publish-form {
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+      width: 100%;
 
-      .signin-form-input {
+      .publish-form-content {
+        display: flex;
+        justify-content: space-between;
+        background-color: white;
+        margin: 10px 0;
+        padding: 20px;
+
+        .publish-form-content-col-l {
+          font-family: $font-main;
+          display: flex;
+          flex-direction: column;
+          justify-content: space-evenly;
+          align-items: flex-start;
+          width: 30%;
+        }
+
+        .publish-form-content-col-r {
+          font-family: $font-main;
+          display: flex;
+          flex-direction: column;
+          justify-content: space-evenly;
+          align-items: flex-start;
+          width: 60%;
+        }
+      }
+
+      .border {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 200px;
+        width: 100%;
+        border: 2px dashed $bg-grey;
+
+        .publish-form-label-upload {
+          border: 2px solid $prim-blue;
+          padding: 20px 30px;
+          border-radius: 5px;
+          font-family: $font-main;
+          color: $prim-blue;
+          font-size: 1.3rem;
+          font-weight: 300;
+          &:hover {
+            cursor: pointer;
+          }
+        }
+      }
+
+      input[type="file"] {
+        display: none;
+      }
+
+      .publish-form-input {
         border: none;
         outline: none;
         font-family: $font-main;
         border-bottom: 1px solid #d5cdcd;
         padding: 10px;
         margin: 10px 0;
+        width: 100%;
       }
-      .signin-form-submit {
+      .publish-form-submit {
         margin: 20px 0;
         border: none;
         font-family: $font-main;
